# api-chat

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/app/: logic.py  schemas.py  service.py
src/app/api/: routes.py
src/app/db/: crud.py  models.py  session.py
src/app/migrations/: env.py
src/app/migrations/versions/: 97f790f7a0cc_init_tables.py
src/tests/: test_integration.py
